# cleanserve

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  cleanserve.json  docker-compose.yml  install.sh
.github/workflows/: ci.yml  release.yml
.sisyphus/: QUICK_REFERENCE.md  README.md  SECURITY_ANALYSIS.md
.sisyphus/plans/: security-hardening-production.md
crates/cleanserve-bundle/: Cargo.toml
crates/cleanserve-bundle/src/: builder.rs  config.rs  lib.rs  phar.rs
crates/cleanserve-cli/: Cargo.toml
crates/cleanserve-cli/src/: main.rs
crates/cleanserve-cli/src/commands/: composer.rs  down.rs  init.rs  init_index.html  list.rs  mod.rs  package.rs  up.rs  update.rs  use_.rs
crates/cleanserve-cli/src/commands/init/: html_pages.rs  mod.rs
crates/cleanserve-core/: Cargo.toml
crates/cleanserve-core/src/: config.rs  environment.rs  error_overlay.rs  extension_manager.rs  framework.rs  lib.rs  path_traversal.rs  php_downloader.rs  php_manager.rs  php_worker.rs  request_validator.rs  security.rs  signals.rs  slowloris.rs  ssl.rs  static_blacklist.rs  static_server.rs  structured_logging.rs  version_manifest.rs  worker_pool.rs
crates/cleanserve-core/src/auto_updater/: checker.rs  downloader.rs  installer.rs  mod.rs
crates/cleanserve-core/src/fastcgi/: mod.rs
crates/cleanserve-core/src/package_manager/: cache.rs  downloader.rs  lifecycle.rs  manifest.rs  mod.rs  project.rs  registry.rs  runtime.rs
crates/cleanserve-core/tests/: integration_auto_updater.rs  integration_e2e_workflows.rs  integration_package_lifecycle.rs  integration_package_manager.rs  integration_security_validation.rs
crates/cleanserve-inliner/: Cargo.toml
crates/cleanserve-inliner/src/: generator.rs  lib.rs  parser.rs
crates/cleanserve-preload/: Cargo.toml
crates/cleanserve-preload/src/: composer.rs  generator.rs  lib.rs
crates/cleanserve-proxy/: Cargo.toml
crates/cleanserve-proxy/src/: lib.rs  server.rs  tls_config.rs
crates/cleanserve-proxy/tests/: rate_limiter_integration.rs
crates/cleanserve-shared/: Cargo.toml
crates/cleanserve-shared/src/: error.rs  lib.rs
crates/cleanserve-vfs/: Cargo.toml
crates/cleanserve-vfs/src/: lib.rs  memory.rs  symlink.rs  traits.rs  zip.rs
crates/cleanserve-watcher/: Cargo.toml
crates/cleanserve-watcher/src/: lib.rs  watcher.rs
docs/: README.md
docs/api/: configuration-reference.md
docs/architecture/: bundle.md  fastcgi.md  overview.md  proxy-server.md  vfs.md  worker-pool.md
docs/contributing/: architecture-guide.md  development-setup.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/guide/: cli-commands.md  docker.md  framework-support.md  hot-reload.md  php-management.md
docs/plans/: 2026-03-19-cleanserve-design.md  2026-03-19-cleanserve-phase1-implementation.md  2026-03-19-cleanserve-phase2-implementation.md  2026-03-21-api-docs-design.md  2026-03-21-api-docs-implementation.md  2026-03-21-documentation-design.md  2026-03-21-html-pages-generation-implementation.md  2026-03-21-internal-pages-design.md  2026-03-21-internal-pages-implementation.md  2026-03-21-package-manager-design.md  2026-03-21-phase-2-implementation.md  2026-03-21-phase-3-implementation.md  2026-03-21-phase-4-implementation.md  2026-03-21-phase-4b-implementation.md  2026-03-21-phase-5-implementation.md  2026-03-21-version-management-redesign-design.md  2026-03-21-version-management-redesign.md
docs/security/: overview.md  path-traversal.md  rate-limiting.md  request-validation.md  slowloris-protection.md  ssl-tls.md  static-blacklist.md
resources/: packages-manifest.json
