[workspace]
resolver = "2"
members = [
    "crates/cleanserve-shared",
    "crates/cleanserve-core",
    "crates/cleanserve-cli",
    "crates/cleanserve-proxy",
    "crates/cleanserve-watcher",
    "crates/cleanserve-preload",
    "crates/cleanserve-inliner",
    "crates/cleanserve-vfs",
    "crates/cleanserve-bundle",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["CleanServe Team"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"
walkdir = "2"
regex = "1"
chrono = "0.4"
dirs = "5"
