[package]
name = "cleanserve-preload"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
walkdir = "2"
regex = "1"
tracing = "0.1"
thiserror = "1"
chrono = "0.4"
anyhow = "1"
dirs = "5"

[dev-dependencies]
tempfile = "3"
