[package]
name = "cleanserve-vfs"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
tar = "0.4"
zip = "2"
flate2 = "1"
memmap2 = "0.9"
tracing = "0.1"
thiserror = "1"
anyhow = "1"
dirs = "5"
walkdir = "2"
sha2 = "0.10"
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3"
